📂 Upload lots of files

--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,7 @@ HH|x-x-x-x-x-x-x-x-||
    1 + 2 + 3 + 4 +
     </textarea>
     <button id="button-reset">Reset</button>
-    <button id="button-start-stop">Start/Stop</button>
+    <button id="button-start-stop">Start</button>
   </body>
   <script type="text/javascript" src="index.js"></script>
 </html>
