--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beats</title>
   </head>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+    body {
+      overflow: hidden;
+      margin: 0;
+      padding: 1rem;
+      width: 100vw;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      & > * + * {
+        margin-block-start: 1rem;
+      }
+    }
+  </style>
   <body>
     <textarea id="drum-tab" rows="5" cols="21">
 HH|x-x-x-x-x-x-x-x-||
@@ -14,6 +32,31 @@ HH|x-x-x-x-x-x-x-x-||
     </textarea>
     <button id="button-reset">Reset</button>
     <button id="button-start-stop">Start</button>
+    <span id="bpm-display">Current BPM: 80</span>
+    <input
+      type="range"
+      id="bpm"
+      name="bpm"
+      list="bpm-markers"
+      min="20"
+      max="240"
+      value="80"
+    />
+    <label for="bpm">BPM Slider</label>
+    <datalist id="bpm-markers">
+      <option value="20"></option>
+      <option value="40"></option>
+      <option value="60"></option>
+      <option value="80"></option>
+      <option value="100"></option>
+      <option value="120"></option>
+      <option value="140"></option>
+      <option value="160"></option>
+      <option value="180"></option>
+      <option value="200"></option>
+      <option value="220"></option>
+      <option value="240"></option>
+    </datalist>
   </body>
   <script type="text/javascript" src="index.js"></script>
 </html>
