🔗 Two way linking between deployment and docs

--- a/static/index.html
+++ b/static/index.html
@@ -57,6 +57,7 @@ HH|x-x-x-x-x-x-x-x-||
       <option value="220"></option>
       <option value="240"></option>
     </datalist>
+    <p>Source code on <a href="https://github.com/fildon/beats/">GitHub</a></p>
   </body>
   <script type="text/javascript" src="index.js"></script>
 </html>
