📏 Tweak the available BPM values

--- a/static/index.html
+++ b/static/index.html
@@ -30,7 +30,8 @@ HH|x-x-x-x-x-x-x-x-||
  S|----o-------o---||
  B|o-------o-------||
    1 + 2 + 3 + 4 +
-    </textarea>
+</textarea
+    >
     <p>
       This project is in active development. Not all features are ready yet. At
       present the drum tab is parsed only at the moment the start button is
@@ -46,24 +47,28 @@ HH|x-x-x-x-x-x-x-x-||
       id="bpm"
       name="bpm"
       list="bpm-markers"
-      min="20"
-      max="240"
+      min="40"
+      max="200"
       value="80"
     />
     <label for="bpm">BPM Slider</label>
     <datalist id="bpm-markers">
-      <option value="20"></option>
-      <option value="40"></option>
+      <option value="50"></option>
       <option value="60"></option>
+      <option value="70"></option>
       <option value="80"></option>
+      <option value="90"></option>
       <option value="100"></option>
+      <option value="110"></option>
       <option value="120"></option>
+      <option value="130"></option>
       <option value="140"></option>
+      <option value="150"></option>
       <option value="160"></option>
+      <option value="170"></option>
       <option value="180"></option>
+      <option value="190"></option>
       <option value="200"></option>
-      <option value="220"></option>
-      <option value="240"></option>
     </datalist>
     <p>Source code on <a href="https://github.com/fildon/beats/">GitHub</a></p>
   </body>
