--- a/static/index.html
+++ b/static/index.html
@@ -33,13 +33,7 @@
   </style>
   <body>
     <h1>Beats</h1>
-    <textarea id="drum-tab" rows="8" cols="70">
-HH|x-x-x-x-x-x-x-x-||
- S|----o-------o---||
- B|o-------o-------||
-   1 + 2 + 3 + 4 +
-</textarea
-    >
+    <textarea id="drum-tab" rows="8" cols="70"></textarea>
     <p>
       This project is in active development. Not all features are ready yet.
     </p>
