Queryparam synchronization for BPM, alongside drum tabs

--- a/static/index.html
+++ b/static/index.html
@@ -61,7 +61,7 @@
     <button id="button-reset">Reset</button>
     <button id="button-start-stop">Start</button>
     <div class="group">
-      <span id="bpm-display">Current BPM: 80</span>
+      <span id="bpm-display"></span>
       <input
         type="range"
         id="bpm"
@@ -69,7 +69,6 @@
         list="bpm-markers"
         min="40"
         max="200"
-        value="80"
       />
       <label for="bpm">BPM Slider</label>
       <datalist id="bpm-markers">
