📲Better handling of narrow UIs

--- a/static/index.html
+++ b/static/index.html
@@ -31,7 +31,12 @@
   </style>
   <body>
     <h1>Beats</h1>
-    <textarea id="drum-tab" rows="8" cols="70"></textarea>
+    <textarea
+      id="drum-tab"
+      rows="8"
+      wrap="off"
+      style="max-width: 95vw"
+    ></textarea>
     <p>
       This project is in active development. Not all features are ready yet.
     </p>
