--- a/static/index.html
+++ b/static/index.html
@@ -38,7 +38,7 @@
       style="max-width: 95vw"
     ></textarea>
     <p>
-      This project is in active development. Not all features are ready yet.
+      This project is inactive. Not all features.
     </p>
     <details>
       <summary>Instructions:</summary>
